<resources>
    <string name="app_name">Dopamine</string>
    <string name="home">Home</string>
    <string name="shorts">Shorts</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="channel_title">Channel Title</string>
    <string name="video_title">Video Title</string>
    <string name="time">00:00</string>
    <string name="sign_out">Sign out</string>
    <string name="codingVideos">Coding Videos</string>
    <string name="sportsVideos">Sports/E-Sports Videos</string>
    <string name="techVideos">Tech Videos</string>
    <string name="dopamine_library">Dopamine Library</string>
    <string name="clear_all">Clear all</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="youtube_data">Youtube Data</string>
    <string name="video_view">View</string>
    <string name="like">Like</string>
    <string name="pip">PIP</string>
    <string name="copy">Copy</string>
    <string name="your_favourites">Your Liked Videos</string>
    <string name="create_new_playlist">Create new playlist !</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_description">Playlist Description</string>
    <string name="create">Create Playlist</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="no_region">"No Region Selected"</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="your_playlists">Playlists</string>
    <string name="play_any_video_here">Play any video here</string>
    <string name="play_video">Play Video</string>
    <string name="video_link">Video Link</string>
    <string name="watch_video_from_your_link">Watch video from your link</string>
    <string name="exp_1">Our app provides you to watch video from your link free without ad on single click.</string>
    <string name="experimental">Experimental</string>
    <string name="download_video_without_ad_now_available_in_our_app_for_android">Download video without ad, now available in our app for Android.</string>
    <string name="download_video_free">Download Video Free</string>
    <string name="download_video">Download Video</string>
    <string name="i_want_to_stop_the_download_video">I want to stop the download video !</string>
    <string name="use_advanced_mode">Use Advanced Mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_live_search">Use Live Search</string>
    <string name="welcome_to_experimental_mode">Welcome To Experimental Mode</string>
    <string name="searchbar_hint">Search Something Here </string>
    <string name="voice_search">Voice Search</string>
    <string name="custom_url">Custom URL</string>
    <string name="channel_description">Channel Description</string>
    <string name="subscribers">Subscribers</string>
    <string name="stream_any_video_n_ad_free_on_dopamine">Stream Any Video \n Ad-Free on Dopamine</string>
    <string name="continue_with_phone">Continue with phone</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="system_theme_color">Use system theme color</string>
    <string name="canary">Canary</string>
    <string name="beta">Beta</string>
    <string name="this_dynamic_color_is_available_on_android_14_but_it_s_a_different">This feature is available on Android 14 but currently unavailable.</string>
    <string name="dynamic_colors_android_14">Users Dynamic Colors (Android 14)</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="dopamine_theme_mode">Dopamine Theme</string>
    <string name="light"> ☀️ Day Theme </string>
    <string name="dark"> 🌙 Night Theme </string>
    <string name="system"> 🤖 System Theme </string>
    <string name="current_theme">Current Theme</string>
    <string name="install_pre_release_update">Install Pre-Release Update</string>
    <string name="about_us">About Us</string>
    <string name="developers">Developers</string>
    <string name="about_dopamine">About Dopamine</string>
    <string name="description">Dopamine is a cutting-edge YouTube clone designed to provide users with an immersive video-sharing experience. It is built using Kotlin for the backend and XML for the frontend, and leverages the power of Room Database, the official YouTube API, and the MVVM architecture to deliver seamless performance and a user-friendly interface.</string>
    <string name="app_version">App version</string>
    <string name="build_type">Build type</string>
    <string name="release_date">Release Date</string>
    <string name="for_more_information">For more information</string>
    <string name="github">Github</string>
    <string name="help_me">Help me</string>
    <string name="email">Email</string>
    <string name="about_me">About Me</string>
    <string name="website">Website</string>
    <string name="contact_me">Contact Me</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="send_email">Send Email</string>
    <string name="web_client_id">328744831606-g4gees2nj81o498p6s88n69s3ra4abb1.apps.googleusercontent.com</string>
    <string name="no_contact_available">No Contact Available</string>
    <string name="photos_from_user">Photos from User</string>
    <string name="experimental_features">Experimental Features</string>
    <string name="user">User</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="appearance">Appearance</string>
    <string name="theme">theme</string>
    <string name="no_description">No Description</string>
    <string name="get_unlimited_search_results">Get unlimited search results !</string>
    <string name="use_beta_updates_to_improve_your_experience">Use beta updates to improve your experience</string>
    <string name="available_in_android_12_and_above">Available in android 12 and above</string>
    <string name="you_can_view_more_about_dopamine_here">You can view more about Dopamine here</string>
    <string name="options">Options</string>
    <string name="you_will_be_signed_out_from_dopamine">You will be signed out from Dopamine</string>
    <string name="stream_video">Stream Video</string>
    <string name="copy_paste_your_link_and_watch_any_video_free">Copy paste your link and watch any video free !</string>
    <string name="download_any_video">Download any video</string>
    <string name="all_videos_are_available_for_download">All videos are available for download</string>
    <string name="about_developer">About Developer</string>
    <string name="developed_by_me">Developed By Piyush Makwana ❤️</string>
    <string name="title_activity_dopamine_settings">DopamineSettings</string>
    <string name="setting">Setting</string>
    <string name="open_settings">Open settings</string>
    <string name="current_region">Current Region</string>
    <string name="your_home_region">Your home region</string>
    <string name="open_search">Open Search</string>
    <string name="notification">Notification</string>
    <string name="open_notification">Open Notification</string>
    <string name="screen_cast">Screen Cast</string>
    <string name="start_screencast">Start Screencast</string>
    <string name="currently_you_are_not_logged_in">Currently , You are not logged in !</string>
    <string name="to_get_access_to_save_your_watch_history_playlist_and_more_features_please_sign_in_to_dopamine">To get access to save your watch history, playlist and more features ,please sign in to dopamine ❤️</string>
    <string name="watch_history">History</string>
    <string name="like_videos">Like Videos</string>
    <string name="like_videos_to_get_more_recommendations">Like videos to get more recommendations</string>
    <string name="_0">0</string>
    <string name="watch_later">Watch Later</string>
    <string name="watch_later_after_you_finish_watching_videos">Watch later after you finish watching videos</string>
    <string name="add_new_playlist">Add New Playlist</string>
    <string name="empty_playlist">Empty Playlist</string>
    <string name="favorites_playlist">favorite playlist</string>
    <string name="watch_later_playlist">watch later</string>
    <string name="admin">admin</string>
    <string name="welcome_to_dopamine">Welcome to Dopamine</string>
    <string name="administrator_id">Administrator ID</string>
    <string name="you_are_accessing_the_administrator_of_the_app_please_continue_with_caution">You are accessing the administrator of the app,\n Please continue with caution !</string>
    <string name="continue_with_adminId">Continue</string>
    <string name="create_a_new_playlist">Create a new playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="manage_playlists">Manage Playlists</string>
    <string name="you_can_customize_your_playlists_here">You can customize your playlists here</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="playlists_name">Playlists Name</string>
    <string name="playlists_description">Playlists Description</string>
    <string name="you_have_no_playlists_yet">You have no videos yet</string>
    <string name="please_create_one_and_add_videos_to_it">please add videos to your playlist !</string>
    <string name="empty_data_in_playlist">0</string>
    <string name="something_went_wrong">Something went wrong !</string>
    <string name="try_again_later">Try again later</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="we_are_getting_the_data_from_the_server">We are getting the data from the server !</string>
    <string name="wait_a_moment">Wait a moment...</string>
    <string name="save_this_device">Save the current login device</string>
    <string name="add_notification">Add Notification</string>
    <string name="notification_id">Notification Id</string>
    <string name="application_build">Application Build</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_description">Notification Description</string>
    <string name="notification_publish_time">Notification Publish Time</string>
    <string name="notification_publish_date">Notification Publish Date</string>
    <string name="publish_notification">Publish Notification</string>
    <string name="published_notification">Published Notification</string>
    <string name="preview_notification">Preview Notification</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="account">Account</string>
    <string name="clear_all_watch_history">Clear all watch history</string>
    <string name="continue_to_search">Continue to search</string>
    <string name="not_now">Not now</string>
    <string name="new_faster_ways_to_search_on_dopamine">New! Ways to search on dopamine</string>
    <string name="to_get_search_videos_channel_and_many_more_using_your_vice_allow_dopamine_to_record_audio">To get search videos, channel and many more data using your voice, please allow dopamine to record audio</string>
</resources>