<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Advanced">

        <ListPreference app:title="Dark Mode"
            app:key="dark_mode"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="1"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_entries_values"/>

    </PreferenceCategory>

    <Preference
        app:summary="Click To Reach Us"
        app:title="About Us">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.instagram.com/rajatt.dev/"/>

    </Preference>

</PreferenceScreen>