<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/options"
        android:title="@string/notification">
        <menu>
            <item
                android:id="@+id/addNotification"
                android:icon="@drawable/add_notification"
                android:title="@string/published_notification"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/getNotification"
                android:icon="@drawable/ic_notification"
                android:title="@string/preview_notification"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>