<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:text="@string/new_faster_ways_to_search_on_dopamine"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:text="@string/to_get_search_videos_channel_and_many_more_using_your_vice_allow_dopamine_to_record_audio"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:src="@drawable/speech_to_text"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueToSearch"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/continue_to_search"
        style="@style/Widget.Material3.Button.Icon"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/notNow"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/not_now"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_marginBottom="12dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        app:layout_constraintTop_toBottomOf="@id/continueToSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>